[package]
name = "timeular-cli"
version = "0.1.0"
authors = ["Philipp Hochkamp <me@phochkamp.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
const_format = "0.2.13"
chrono = { version = "0.4", features = ["serde"] }
